[package]
name = "rusty_lyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.27", default-features = false }
serde = {version = "1.0.158", features = ["derive"]}
serde_json = "1.0.94"
tokio = {version = "1.26.0", features = ["full"]}
tokio-stream = "0.1.12"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
warp = "0.3.3"
